--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,14 @@
 buildscript {
     ext {
         koin_version = '3.2.2'
+        nav_version = '2.5.2'
+    }
+
+    dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
+
 
 plugins {
     id 'com.android.application' version '7.2.2' apply false
