--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,11 +57,13 @@ dependencies {
     testImplementation "io.insert-koin:koin-test:$koin_version"
 
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     //Gson
     implementation 'com.google.code.gson:gson:2.9.1'
 
     //OkHttp
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
 }
