--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         koin_version = '3.2.2'
         nav_version = '2.5.2'
+        retrofit_version = '2.9.0'
     }
 
     dependencies {
