--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     //OkHttp
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
