--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.paging:paging-runtime:3.1.1"
+
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+    testImplementation 'org.mockito:mockito-inline:3.12.4'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -68,5 +74,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
 
+    //Swipe-refresh
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
