--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 
     //OkHttp
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp3_version"
 
     //Swipe-refresh
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
